Clear code, include lombok in the project, separate address of class Client create entity and DTO Address, subclass addressDTOClient, Provider