@@ -1,7 +1,6 @@
 package com.maurocenter.almox.services;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -18,27 +17,13 @@ public class ProviderService {
 	
 	public List<ProviderDTO> findAll() {
 		List<Provider> list = providRepository.findAll();
-		return list.stream().map(x -> new ProviderDTO(x)).collect(Collectors.toList());
+		return list.stream().map(ProviderDTO::new).toList();
 	}
 
 	public ProviderDTO insertProvider(ProviderDTO dto) {
 		Provider entity = new Provider();
-		insertToProvider(dto,entity);
+		entity.convertEntityToDto(dto,entity);
 		entity = providRepository.save(entity);
 		return new ProviderDTO(entity);
-	}
-	
-	private void insertToProvider(ProviderDTO dto, Provider entity) {
-		entity.setCorporateName(dto.getCorporateName());
-		entity.setFantasyName(dto.getFantasyName());
-		entity.setSocialRegister(dto.getSocialRegister());
-		entity.setEmail(dto.getEmail());
-		entity.setNameStreet(dto.getNameStreet());
-		entity.setNumber(dto.getNumber());
-		entity.setDistrict(dto.getDistrict());
-		entity.setCity(dto.getCity());
-		entity.setState(dto.getState());
-		entity.setCep(dto.getCep());
-		entity.setPhone(dto.getPhone());
 	}
 }
